--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -52,7 +52,7 @@ ssssssssssssssssssssssssssssssss sssss"/>
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="300"/>
+            android:text="00"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -73,7 +73,7 @@ ssssssssssssssssssssssssssssssss sssss"/>
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="4"/>
+            android:text="0"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -85,7 +85,7 @@ ssssssssssssssssssssssssssssssss sssss"/>
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="2"/>
+            android:text="0"/>
     </LinearLayout>
    <!-- <DatePicker
         android:id="@+id/date_Picker"
@@ -99,7 +99,7 @@ ssssssssssssssssssssssssssssssss sssss"/>
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:layout_marginRight="100dp"
+        android:layout_marginRight="50dp"
         android:layout_gravity="right"
         android:padding="5dp"
         android:hint="Pick Date"
@@ -107,12 +107,13 @@ ssssssssssssssssssssssssssssssss sssss"/>
         android:paddingLeft="20dp"
         android:drawableRight="@drawable/ic_action_date"
         android:drawablePadding="10dp"
+        android:editable="false"
         android:singleLine="true"/>
 
     <Spinner
         android:id="@+id/planets_spinner"
         style="@style/Widget.AppCompat.DropDownItem.Spinner"
-        android:layout_marginRight="100dp"
+        android:layout_marginRight="50dp"
         android:layout_gravity="right"
         android:layout_marginTop="10dp"
         android:background="@drawable/border"
@@ -132,7 +133,7 @@ ssssssssssssssssssssssssssssssss sssss"/>
             android:id="@+id/total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="300"/>
+            android:text="00"/>
     </LinearLayout>
 
     <Button
