--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -111,7 +111,7 @@ ssssssssssssssssssssssssssssssss sssss"/>
         android:singleLine="true"/>
 
     <Spinner
-        android:id="@+id/planets_spinner"
+        android:id="@+id/myspinner"
         style="@style/Widget.AppCompat.DropDownItem.Spinner"
         android:layout_marginRight="50dp"
         android:layout_gravity="right"
